--- a/TecAirWebApp/package.json
+++ b/TecAirWebApp/package.json
@@ -11,11 +11,11 @@
     "angular-loader": "1.7.x",
     "angular-resource": "1.7.x",
     "angular-route": "^1.7.8",
-    "angular-touch": "1.7.x",
     "angular-sanitize": "1.7.x",
+    "angular-touch": "1.7.x",
     "angular-ui-bootstrap": "2.5.x",
     "bootstrap": "3.3.x",
-    "jquery": "3.3.x"
+    "jquery": "^3.4.0"
   },
   "devDependencies": {
     "angular-mocks": "1.7.x",
